# modav

./: .gitignore  Cargo.toml  README.md  todo.md  ~
.github/ISSUE_TEMPLATE/: bug.yml  new-feature.yml
.github/workflows/: main.yml  release.yml
src/: main.rs  styles.rs  temp.rs  toast.rs  utils.rs  views.rs  widgets.rs  wizard.rs
src/views/: barchart.rs  editor.rs  line.rs  models.rs  shared.rs  stacked_barchart.rs  tabs.rs  temp.rs
src/views/common/: graph.rs
src/views/models/: graph.rs
src/views/shared/: graph.rs  styles.rs
src/views/stacked_barchart/: graph.rs
src/widgets/: dashmenu.rs  settings.rs  sidemenu.rs  style.rs  toast.rs  toolbar.rs  tools.rs  wizard.rs
src/widgets/wizard/: barchart.rs  line.rs  shared.rs  sheet.rs  stacked_barchart.rs
