[package]
name = "modav"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.10.0", features = ["default", "advanced", "lazy"] }
iced_aw = { version = "0.7.0", default-features = false, features = [
    "menu",
    "quad",
    "tabs",
] }
iced_widget = "0.1.3"
rfd = "0.12.1"
tokio = { version = "1.34.0", features = ["fs"] }
