[package]
name = "modav"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modav_core = { git = "ssh://github.com/EmmanuelDodoo/modav_core.git" }
iced = { version = "0.12.1", features = [
    "default",
    "advanced",
    "lazy",
    "highlighter",
    "canvas",
] }
iced_aw = { version = "0.8.0", default-features = false, features = [
    "menu",
    "quad",
    "tabs",
] }
iced_widget = "0.1.3"
rfd = "0.12.1"
tokio = { version = "1.36.0", features = ["fs"] }
rand = { version = "0.8.5", features = ["std"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
