[package]
name = "modav"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "This is a personal learning project aimed at creating a simple, intuitive, and modern data visualization tool using Rust."
repository = "https://github.com/EmmanuelDodoo/modav"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
modav_core = "0.1.1"
iced = { version = "0.12.1", features = [
    "default",
    "advanced",
    "lazy",
    "highlighter",
    "canvas",
    "tokio",
] }
rfd = "0.12.1"
tokio = { version = "1.39.0", features = ["fs"] }
rand = { version = "0.8.5", features = ["std"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tracing = "0.1.40"
tracing-appender = "0.2.3"
directories = "5.0"
